--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			<form action="">
 				  <div class="col-lg-6">
 				    <div class="input-group">
-				      <input type="number" class="form-control" placeholder="Search for...">
+				      <input type="number" class="form-control" id="inputId" placeholder="Search for...">
 				      <span class="input-group-btn">
-				        <button class="btn btn-secondary" type="button">Go!</button>
+				        <button class="btn btn-secondary" id="searchId" type="button">Go!</button>
 				      </span>
 				    </div>
 				  </div>
